refactor(jvm): replace Pi4J with Java FFM for all transports
Drop Pi4J entirely; I2CTransport and NeoPixelTransport now call libc
open/ioctl/write/read/close directly via java.lang.foreign (stable in
Java 22+). NeoPixelTransport uses the proven SpiTest ioctl sequence
that configures SPI mode, bits-per-word, and 2.4 MHz speed so spidev
traffic is visible on the wire. All 77 JBang example and test files
updated: Pi4J //DEPS lines removed, constructors simplified, //JAVA 22+
and //JAVA_OPTIONS --enable-native-access=ALL-UNNAMED added. Build
target raised to Java 22; Pi4J removed from parent POM.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>