@@ -1,11 +1,9 @@
 ///usr/bin/env jbang "$0" "$@" ; exit $?
+//JAVA 22+
+//JAVA_OPTIONS --enable-native-access=ALL-UNNAMED
 //DEPS it.uhde:periph-transport:1.0-SNAPSHOT
 //DEPS it.uhde:periph-groovy:1.0-SNAPSHOT
-//DEPS com.pi4j:pi4j-core:2.7.0
-//DEPS com.pi4j:pi4j-plugin-raspberrypi:2.7.0
-//DEPS com.pi4j:pi4j-plugin-linuxfs:2.7.0
 
-import com.pi4j.Pi4J
 import it.uhde.periph.transport.NeoPixelTransport
 import it.uhde.periph.chips.led.WS2812BFull
 
@@ -15,75 +13,70 @@ final int    RAINBOW_S = 10
 final int    STROBE_S  = 2
 final int    STROBE_HZ = 10
 
-def pi4j = Pi4J.newAutoContext()                                    // initialise Pi4J, () → Context
+def transport = new NeoPixelTransport(0, 0)              // open SPI bus 0 device 0, (busNum, deviceNum) → NeoPixelTransport
 try {
-    def transport = new NeoPixelTransport(pi4j, 0, 0)              // open SPI bus 0 device 0, (busNum, deviceNum) → NeoPixelTransport
-    try {
-        def strip = new WS2812BFull(transport, PIXELS)              // construct driver, (transport, n=30) → WS2812BFull
+    def strip = new WS2812BFull(transport, PIXELS)              // construct driver, (transport, n=30) → WS2812BFull
 
-        // --- Rainbow rotation for 10 seconds ---
-        // Each pixel gets a hue offset by (pixel_index / n_pixels) of the colour
-        // wheel, and the hue offset advances by 1/300 each frame so the rainbow
-        // rotates at about one revolution per second.
-        strip.setBrightness(200)                                     // dim to ~78% for rainbow, (value=0–255) → void
-        double hueOffset = 0.0
-        long rainbowEnd = System.currentTimeMillis() + RAINBOW_S * 1000L
-        long lastPrint  = System.currentTimeMillis()
+    // --- Rainbow rotation for 10 seconds ---
+    // Each pixel gets a hue offset by (pixel_index / n_pixels) of the colour
+    // wheel, and the hue offset advances by 1/300 each frame so the rainbow
+    // rotates at about one revolution per second.
+    strip.setBrightness(200)                                     // dim to ~78% for rainbow, (value=0–255) → void
+    double hueOffset = 0.0
+    long rainbowEnd = System.currentTimeMillis() + RAINBOW_S * 1000L
+    long lastPrint  = System.currentTimeMillis()
 
-        while (System.currentTimeMillis() < rainbowEnd) {
-            def colors = (0..<PIXELS).collect { p ->
-                double hue = (hueOffset + p / (double) PIXELS) % 1.0
-                hsvToRgb(hue, 1.0, 1.0)
-            }
-            strip.setPixels(colors)                                   // load rainbow frame into buffer, (colors: List<int[]>) → void
-            strip.show()                                              // transmit frame to strip, () → void
-
-            hueOffset = (hueOffset + 1.0 / 300) % 1.0
-
-            if (System.currentTimeMillis() - lastPrint >= 1000) {
-                println("hue offset: ${String.format('%.3f', hueOffset)}")
-                lastPrint = System.currentTimeMillis()
-            }
-            Thread.sleep(FRAME_MS)
+    while (System.currentTimeMillis() < rainbowEnd) {
+        def colors = (0..<PIXELS).collect { p ->
+            double hue = (hueOffset + p / (double) PIXELS) % 1.0
+            hsvToRgb(hue, 1.0, 1.0)
         }
+        strip.setPixels(colors)                                   // load rainbow frame into buffer, (colors: List<int[]>) → void
+        strip.show()                                              // transmit frame to strip, () → void
 
-        // --- Strobe: full white / off at 10 Hz for 2 seconds ---
-        // A fast on/off flash tests the brightness property and demonstrates
-        // fill() as an immediate update path distinct from setPixel + show().
-        strip.setBrightness(255)                                      // restore full brightness for strobe, (value=0–255) → void
-        long strobeEnd    = System.currentTimeMillis() + STROBE_S * 1000L
-        long halfPeriodMs = 1000L / (STROBE_HZ * 2)
+        hueOffset = (hueOffset + 1.0 / 300) % 1.0
 
-        while (System.currentTimeMillis() < strobeEnd) {
-            strip.fill(255, 255, 255)                                 // flash white, (r=0–255, g=0–255, b=0–255) → void
-            Thread.sleep(halfPeriodMs)
-            strip.off()                                               // flash off, () → void
-            Thread.sleep(halfPeriodMs)
+        if (System.currentTimeMillis() - lastPrint >= 1000) {
+            println("hue offset: ${String.format('%.3f', hueOffset)}")
+            lastPrint = System.currentTimeMillis()
         }
-
-        // --- Return to rainbow ---
-        // Resume from the hue offset where the first phase stopped.
-        strip.setBrightness(200)                                      // dim for second rainbow phase, (value=0–255) → void
-        long resumeEnd = System.currentTimeMillis() + RAINBOW_S * 1000L
-
-        while (System.currentTimeMillis() < resumeEnd) {
-            def colors = (0..<PIXELS).collect { p ->
-                double hue = (hueOffset + p / (double) PIXELS) % 1.0
-                hsvToRgb(hue, 1.0, 1.0)
-            }
-            strip.setPixels(colors)                                   // load rainbow frame into buffer, (colors: List<int[]>) → void
-            strip.show()                                              // transmit frame to strip, () → void
-            hueOffset = (hueOffset + 1.0 / 300) % 1.0
-            Thread.sleep(FRAME_MS)
-        }
-
-        strip.off()                                                    // turn off strip at exit, () → void
-
-    } finally {
-        transport.close()
+        Thread.sleep(FRAME_MS)
     }
+
+    // --- Strobe: full white / off at 10 Hz for 2 seconds ---
+    // A fast on/off flash tests the brightness property and demonstrates
+    // fill() as an immediate update path distinct from setPixel + show().
+    strip.setBrightness(255)                                      // restore full brightness for strobe, (value=0–255) → void
+    long strobeEnd    = System.currentTimeMillis() + STROBE_S * 1000L
+    long halfPeriodMs = 1000L / (STROBE_HZ * 2)
+
+    while (System.currentTimeMillis() < strobeEnd) {
+        strip.fill(255, 255, 255)                                 // flash white, (r=0–255, g=0–255, b=0–255) → void
+        Thread.sleep(halfPeriodMs)
+        strip.off()                                               // flash off, () → void
+        Thread.sleep(halfPeriodMs)
+    }
+
+    // --- Return to rainbow ---
+    // Resume from the hue offset where the first phase stopped.
+    strip.setBrightness(200)                                      // dim for second rainbow phase, (value=0–255) → void
+    long resumeEnd = System.currentTimeMillis() + RAINBOW_S * 1000L
+
+    while (System.currentTimeMillis() < resumeEnd) {
+        def colors = (0..<PIXELS).collect { p ->
+            double hue = (hueOffset + p / (double) PIXELS) % 1.0
+            hsvToRgb(hue, 1.0, 1.0)
+        }
+        strip.setPixels(colors)                                   // load rainbow frame into buffer, (colors: List<int[]>) → void
+        strip.show()                                              // transmit frame to strip, () → void
+        hueOffset = (hueOffset + 1.0 / 300) % 1.0
+        Thread.sleep(FRAME_MS)
+    }
+
+    strip.off()                                                    // turn off strip at exit, () → void
+
 } finally {
-    pi4j.shutdown()
+    transport.close()
 }
 
 static int[] hsvToRgb(double h, double s, double v) {
