@@ -1,11 +1,9 @@
 ///usr/bin/env jbang "$0" "$@" ; exit $?
+//JAVA 22+
+//JAVA_OPTIONS --enable-native-access=ALL-UNNAMED
 //DEPS it.uhde:periph-transport:1.0-SNAPSHOT
 //DEPS it.uhde:periph-java:1.0-SNAPSHOT
-//DEPS com.pi4j:pi4j-core:2.7.0
-//DEPS com.pi4j:pi4j-plugin-raspberrypi:2.7.0
-//DEPS com.pi4j:pi4j-plugin-linuxfs:2.7.0
 
-import com.pi4j.Pi4J;
 import it.uhde.periph.transport.NeoPixelTransport;
 import it.uhde.periph.chips.led.WS2812BFull;
 
@@ -25,8 +23,7 @@ public class Demo {
     private static final int    STROBE_HZ = 10;
 
     public static void main(String[] args) throws Exception {
-        var pi4j = Pi4J.newAutoContext();                                // initialise Pi4J, () → Context
-        try (var transport = new NeoPixelTransport(pi4j, 0, 0)) {      // open SPI bus 0 device 0, (busNum, deviceNum) → NeoPixelTransport
+        try (var transport = new NeoPixelTransport(0, 0)) {      // open SPI bus 0 device 0, (busNum, deviceNum) → NeoPixelTransport
             var strip = new WS2812BFull(transport, PIXELS);             // construct driver, (transport, n=30) → WS2812BFull
 
             // --- Rainbow rotation for 10 seconds ---
@@ -95,8 +92,6 @@ public class Demo {
 
             strip.off();                                                  // turn off strip at exit, () → void
 
-        } finally {
-            pi4j.shutdown();
         }
     }
 
