@@ -1,11 +1,9 @@
 ///usr/bin/env jbang "$0" "$@" ; exit $?
+//JAVA 22+
+//JAVA_OPTIONS --enable-native-access=ALL-UNNAMED
 //DEPS it.uhde:periph-transport:1.0-SNAPSHOT
 //DEPS it.uhde:periph-java:1.0-SNAPSHOT
-//DEPS com.pi4j:pi4j-core:2.7.0
-//DEPS com.pi4j:pi4j-plugin-raspberrypi:2.7.0
-//DEPS com.pi4j:pi4j-plugin-linuxfs:2.7.0
 
-import com.pi4j.Pi4J;
 import it.uhde.periph.transport.I2CTransport;
 import it.uhde.periph.chips.power.Ina219Full;
 
@@ -21,8 +19,7 @@ public class Demo {
     private static final long   PERIOD_MS = 1000;
 
     public static void main(String[] args) throws Exception {
-        var pi4j = Pi4J.newAutoContext();                              // initialise Pi4J, () → Context
-        try (var transport = new I2CTransport(pi4j, 1, 0x40)) {      // open I²C bus 1, device 0x40, (bus, address) → I2CTransport
+        try (var transport = new I2CTransport(1, 0x40)) {      // open I²C bus 1, device 0x40, (bus, address) → I2CTransport
             var ina = new Ina219Full(transport, 0.1, 2.0);            // construct driver, (transport, rShunt=0.1 Ω, maxCurrent=2.0 A) → Ina219Full
 
             // --- Configure for noise-sensitive power rail monitoring ---
@@ -72,8 +69,6 @@ public class Demo {
             System.out.printf("%-12s  %-10.3f  %-10.4f  %-10.4f%n",
                     "mean", mean(voltages), mean(currents), mean(powers));
 
-        } finally {
-            pi4j.shutdown();
         }
     }
 
