@@ -1,18 +1,15 @@
 ///usr/bin/env jbang "$0" "$@" ; exit $?
+//JAVA 22+
+//JAVA_OPTIONS --enable-native-access=ALL-UNNAMED
 //DEPS it.uhde:periph-transport:1.0-SNAPSHOT
 //DEPS it.uhde:periph-java:1.0-SNAPSHOT
-//DEPS com.pi4j:pi4j-core:2.7.0
-//DEPS com.pi4j:pi4j-plugin-raspberrypi:2.7.0
-//DEPS com.pi4j:pi4j-plugin-linuxfs:2.7.0
 
-import com.pi4j.Pi4J;
 import it.uhde.periph.transport.I2CTransport;
 import it.uhde.periph.chips.power.Ina3221Minimal;
 
 public class Minimal {
     public static void main(String[] args) throws Exception {
-        var pi4j = Pi4J.newAutoContext();                                    // initialise Pi4J, () → Context
-        try (var transport = new I2CTransport(pi4j, 1, 0x40)) {            // open I²C bus 1, device 0x40, (bus, address) → I2CTransport
+        try (var transport = new I2CTransport(1, 0x40)) {            // open I²C bus 1, device 0x40, (bus, address) → I2CTransport
             var ina = new Ina3221Minimal(transport);                        // construct driver (0.1 Ω shunt all channels), (transport) → Ina3221Minimal
 
             while (true) {
@@ -25,8 +22,6 @@ public class Minimal {
                 System.out.println("---");
                 Thread.sleep(1000);
             }
-        } finally {
-            pi4j.shutdown();
         }
     }
 }
