@@ -1,11 +1,9 @@
 ///usr/bin/env jbang "$0" "$@" ; exit $?
+//JAVA 22+
+//JAVA_OPTIONS --enable-native-access=ALL-UNNAMED
 //DEPS it.uhde:periph-transport:1.0-SNAPSHOT
 //DEPS it.uhde:periph-java:1.0-SNAPSHOT
-//DEPS com.pi4j:pi4j-core:2.7.0
-//DEPS com.pi4j:pi4j-plugin-raspberrypi:2.7.0
-//DEPS com.pi4j:pi4j-plugin-linuxfs:2.7.0
 
-import com.pi4j.Pi4J;
 import it.uhde.periph.transport.I2CTransport;
 import it.uhde.periph.chips.adc_dac.Mcp4725Full;
 
@@ -24,9 +22,8 @@ public class Mcp4725Test {
         int addr = Integer.parseInt(
                 System.getenv().getOrDefault("I2C_ADDR", "0x60").replaceFirst("^0[xX]", ""), 16);
 
-        var pi4j = Pi4J.newAutoContext();
-        try (var transport   = new I2CTransport(pi4j, bus, addr);
-             var gcTransport = new I2CTransport(pi4j, bus, 0x00)) {
+        try (var transport   = new I2CTransport(bus, addr);
+             var gcTransport = new I2CTransport(bus, 0x00)) {
 
             var dac = new Mcp4725Full(transport, gcTransport);
 
@@ -72,8 +69,6 @@ public class Mcp4725Test {
             dac.isEepromReady();
             checkTrue("isEepromReady accepted", true);
 
-        } finally {
-            pi4j.shutdown();
         }
 
         System.out.printf("===DONE: %d passed, %d failed===%n", passed, failed);
